try to stop mobile x overflow

--- a/views/styles/base.scss
+++ b/views/styles/base.scss
@@ -25,6 +25,8 @@ time, mark, audio, video {
 body {
     line-height:1;
     background-color:#9ad3bc2d;
+    overflow-x: hidden;
+    width: 100%;
     position: relative;
 }
 
