--- a/views/styles/layout-admin.scss
+++ b/views/styles/layout-admin.scss
@@ -1,6 +1,7 @@
 .wrapper--div{
     overflow-x: hidden;
     width:100%;
+    position: relative;
 }
 
 nav{
@@ -193,7 +194,7 @@ nav{
     padding: 10px;
     line-height: 1.2;
     border-radius: 5px;
-    height:14vh;
+    height:13.8vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -231,6 +232,14 @@ nav{
 .addpatientform--container{
     position: relative;
     display: none;
+}
+
+.addpatientform--errormessage{
+    display: none;
+    border: 1px solid #ec524b;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .addpatientform{
@@ -633,6 +642,12 @@ nav{
 }
 .no{
     grid-area: no;
+}
+
+@media screen and (max-width: 400px) {
+    body {
+        overflow-x: hidden!important;
+    }
 }
 
 @media only screen and (min-width: 348px) {
